<resources>
    <string name="app_name">APPAnimes</string>

    <!-- Tools-->
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <!-- Labels -->
    <string name="label_producer">Producer:</string>
    <string name="label_director">Director:</string>
    <string name="label_release_year_date">Release Year Date</string>
    <string name="label_score">Score</string>
    <string name="label_description">Description</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
