<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tool="http://schemas.android.com/tools" android:id="@+id/layout">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
                android:id="@+id/verticalSeparator"
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        />

        <TextView
                android:id="@+id/filmTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textSize="24sp"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tool:text="Dororo"
        />

        <TextView
                android:id="@+id/filmDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:ellipsize="end"
                android:textSize="18sp"
                android:textStyle="italic"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/filmTitle"
                app:layout_constraintStart_toStartOf="@id/filmTitle"
                app:layout_constraintEnd_toEndOf="@id/filmTitle"
                tool:text="@string/lorem_ipsum"
        />

        <TextView
                android:id="@+id/filmRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/filmDescription"
                app:layout_constraintStart_toStartOf="@id/filmDescription"
                app:layout_constraintEnd_toStartOf="@+id/verticalSeparator"
                style="@style/LabelListStyleNoBold"
        />

        <TextView
                android:id="@+id/filmDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@id/filmDescription"
                app:layout_constraintStart_toEndOf="@id/verticalSeparator"
                app:layout_constraintEnd_toEndOf="@id/filmDescription"
                style="@style/LabelListStyleNoBold"
        />

        <TextView
                android:id="@+id/labelDirector"
                android:text="@string/label_director"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/filmRate"
                app:layout_constraintStart_toStartOf="@id/filmRate"
                app:layout_constraintEnd_toEndOf="@id/filmRate"
                style="@style/LabelListStyle"
        />

        <TextView
                android:id="@+id/filmDirector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelDirector"
                app:layout_constraintStart_toStartOf="@id/labelDirector"
                app:layout_constraintEnd_toEndOf="@+id/labelDirector"
        />

        <TextView
                android:id="@+id/labelProducer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_producer"
                app:layout_constraintTop_toBottomOf="@id/filmDate"
                app:layout_constraintEnd_toEndOf="@id/filmDate"
                app:layout_constraintStart_toStartOf="@+id/filmDate"
                style="@style/LabelListStyle"
        />

        <TextView
                android:id="@+id/filmProducer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelProducer"
                app:layout_constraintEnd_toEndOf="@id/labelProducer"
                app:layout_constraintStart_toStartOf="@+id/labelProducer"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>