<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activities.FilmActivity"
            android:background="@color/backgroundFilmDetail">

        <androidx.cardview.widget.CardView
                android:id="@+id/detailFilmContent"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <View
                        android:id="@+id/verticalSeparator"
                        android:layout_width="2dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                />

                <TextView
                        android:id="@+id/detailFilmTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="center"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Dororo"
                        style="@style/DetailTitleLabelStyle"
                />

                <View
                        android:id="@+id/firstHorizontalSeparator"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/pink_film_card_border"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                        android:id="@+id/detailFilmYearLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:text="@string/label_release_year_date"
                        app:layout_constraintTop_toBottomOf="@id/firstHorizontalSeparator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/verticalSeparator"
                />

                <TextView
                        android:id="@+id/detailFilmDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="@+id/detailFilmYearLabel"
                        app:layout_constraintStart_toStartOf="@+id/detailFilmYearLabel"
                        app:layout_constraintTop_toBottomOf="@+id/detailFilmYearLabel"
                        tools:text="1999"
                />

                <TextView
                        android:id="@+id/detailFilmScoreLabel"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/label_score"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="@id/detailFilmYearLabel"
                        app:layout_constraintStart_toEndOf="@id/verticalSeparator"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/detailFilmYearLabel"
                />

                <TextView
                        android:id="@+id/detailFilmScore"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmScoreLabel"
                        app:layout_constraintStart_toStartOf="@id/detailFilmScoreLabel"
                        app:layout_constraintEnd_toEndOf="@id/detailFilmScoreLabel"
                        tools:text="Score: 98%"
                />

                <View
                        android:id="@+id/secondHorizontalSeparator"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/pink_film_card_border"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmScore"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                        android:id="@+id/detailFilmDirectorLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="64dp"
                        android:gravity="top"
                        android:text="@string/label_director"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/secondHorizontalSeparator"
                        app:layout_constraintStart_toStartOf="@id/detailFilmDate"
                        app:layout_constraintEnd_toStartOf="@+id/verticalSeparator"
                        app:layout_constraintBottom_toBottomOf="@id/detailFilmDirector"
                        app:layout_constraintHorizontal_bias="0.0"
                />

                <TextView
                        android:id="@+id/detailFilmDirector"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintTop_toTopOf="@id/detailFilmDirectorLabel"
                        app:layout_constraintEnd_toEndOf="@+id/detailFilmScore"
                        app:layout_constraintStart_toEndOf="@+id/detailFilmDirectorLabel"
                        android:textSize="16sp"
                        tools:text="Oda "
                />

                <TextView
                        android:id="@+id/detailFilmProducerLabel"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="64dp"
                        android:gravity="top"
                        android:text="@string/label_producer"
                        android:textSize="16sp"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmDirectorLabel"
                        app:layout_constraintStart_toStartOf="@id/detailFilmDirectorLabel"
                        app:layout_constraintEnd_toStartOf="@+id/verticalSeparator"
                        app:layout_constraintBottom_toBottomOf="@id/detailFilmProducer"
                        app:layout_constraintHorizontal_bias="0.0"
                />

                <TextView
                        android:id="@+id/detailFilmProducer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="@id/detailFilmProducerLabel"
                        app:layout_constraintStart_toEndOf="@id/detailFilmProducerLabel"
                        app:layout_constraintEnd_toEndOf="parent"

                />

                <View
                        android:id="@+id/thirdHorizontalSeparator"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/pink_film_card_border"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmProducerLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <TextView
                        android:id="@+id/detailFilmDescriptionLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/label_description"
                        app:layout_constraintTop_toBottomOf="@id/thirdHorizontalSeparator"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        style="@style/DetailTitleLabelStyle"
                />

                <androidx.core.widget.NestedScrollView
                        android:id="@+id/detailFilmDescriptionScroll"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmDescriptionLabel"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                >

                    <TextView
                            android:id="@+id/detailFilmDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    />

                </androidx.core.widget.NestedScrollView>

                <View
                        android:id="@+id/fourHorizontalSeparator"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/pink_film_card_border"
                        app:layout_constraintTop_toBottomOf="@id/detailFilmDescriptionScroll"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/detailFilmPeoples"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/verticalSeparator"
                        app:layout_constraintTop_toBottomOf="@+id/fourHorizontalSeparator"
                        android:layout_marginTop="16dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>